[package]
name = "everstar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[toolchain]
channel = "nightly"

[workspace]
resolver = "2"

[dependencies]
bevy = {version = "0.6.0", features = ["dynamic"]}
bevy_prototype_lyon = "0.4.0"
bevy_rapier2d = "0.12.1"
if_chain = "1.0.2"
